--- a/src/style.css
+++ b/src/style.css
@@ -124,5 +124,12 @@ button:focus-visible {
   height: 100vh;
 }
 
+.scene-throneRoom {
+  background: url('src/assets/Images/Scenes/ThroneRoom.png') no-repeat center center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
 
 
