--- a/src/style.css
+++ b/src/style.css
@@ -131,5 +131,27 @@ button:focus-visible {
   height: 100vh;
 }
 
+.scene-city {
+  background: url('src/assets/Images/Scenes/City.png') no-repeat center center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
+.rebels {
+  background: url('src/assets/Images/Scenes/Rebels.png') no-repeat center center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
+.slums {
+  background: url('src/assets/Images/Scenes/Slums.png') no-repeat center center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
+
 
 
